<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="1dp"
    android:background="@drawable/recycleview"
    app:contentPadding="5dp">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        >

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/viewproduct"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_marginLeft="12px"
                android:src="@drawable/ic_baseline_shopping_cart_checkout_24"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/productviewname"
                android:layout_marginTop="10px"
                android:textAlignment="center"

                android:text="@string/product_name"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/productviewprice"
                android:text="@string/Price"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="#04AAF4"

                />
            <TextView
                android:id="@+id/callnow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/category" />



                <Button
                    android:id="@+id/viewdetails"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/buttonbg"
                    android:gravity="center"
                    android:text="@string/send_message"
                    android:textColor="@color/white" />



        </LinearLayout>



    </RelativeLayout>


</androidx.cardview.widget.CardView>