<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register">



    <RelativeLayout
        android:id="@+id/relativelayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/shaperec1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <com.blogspot.atifsoftwares.circularimageview.CircularImageView
        android:id="@+id/profileimage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/relativelayout"
        android:layout_centerInParent="true"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_baseline_person_24"
        app:c_border="true"
        android:elevation="2in"
        app:c_border_color="@color/purple_700" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profileimage"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/logininputdesign"
        android:elevation="2in"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="5dp"
        android:hint="@string/name"
        android:minHeight="48dp"
        android:padding="5dp"
        android:shadowRadius="23"
        android:autofillHints=""
        android:inputType="text" />


    <EditText
        android:id="@+id/phoneno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/logininputdesign"
        android:elevation="2in"
        android:drawableStart="@drawable/ic_baseline_contact_phone_24"
        android:drawablePadding="5dp"
        android:hint="@string/phonenumber"
        android:minHeight="48dp"
        android:padding="5dp"
        android:shadowRadius="23"
        android:autofillHints=""
        android:inputType="phone" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneno"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/logininputdesign"
        android:elevation="2in"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="5dp"
        android:hint="@string/email"
        android:minHeight="48dp"
        android:padding="5dp"
        android:shadowRadius="23"
        android:autofillHints=""
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/logininputdesign"
        android:elevation="2in"
        android:drawableStart="@drawable/ic_baseline_key_24"
        android:drawablePadding="5dp"
        android:hint="@string/password"
        android:minHeight="48dp"
        android:padding="5dp"
        android:shadowRadius="23"
        android:autofillHints=""
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/cmpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/logininputdesign"
        android:elevation="2in"
        android:drawableStart="@drawable/ic_baseline_key_24"
        android:drawablePadding="5dp"
        android:hint="@string/confirm_password"
        android:minHeight="48dp"
        android:padding="5dp"
        android:shadowRadius="23"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cmpassword"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:background="@drawable/sendbtn"
        android:elevation="2in"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/alreadyhaveaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:minHeight="30dp"
        android:onClick="Alreadyhaveaccount"
        android:text="@string/already_have_account" />



</RelativeLayout>